test/compile-fail/resolution/conflicts/mod-fn-struct/expected.txt
error: the name `b` is defined multiple times
  ┌─ ./test/compile-fail/resolution/conflicts/mod-fn-struct/top.rhdl:1:5
  │
1 │ mod b {}
  │     - previous definition of the name `b` here
2 │ fn b() {}
3 │ struct b {}
  │        ^ `b` redefined here

